<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Lesson 2</string>
    <string name="quantity">Quantity</string>
    <string name="_nilaiKuantitas">2</string>
    <string name="price">Price</string>
    <string name="_dollar">$10</string>
    <string name="order">Order</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="order_summary_email_subject">HALO <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
