<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.maulvi67.addingjava.MainActivity">

    <EditText
        android:id="@+id/edtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="Nama"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvKuantitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/quantity"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/_minus"
            android:onClick="decrement"/>

        <TextView
            android:id="@+id/tvAngkaKuantitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/_nilaiKuantitas"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/_plus"
            android:onClick="increment"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/tvAngkaHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/_dollar"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/order"
        android:onClick="submitOrder"/>

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

         <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="ORDER"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:background="#FFFF" />-->

    <!--</RelativeLayout>-->


</LinearLayout>
